# demo-python-package

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/python_demo_package_9999/: demo.py
tests/: test_roll.py
